# bunsen

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  requirements_dev.txt  settings.yaml  setup.cfg
.bunsen/: issue_agent.yaml  settings.yaml  swe_agent.yaml
.github/workflows/: coding_agent.yaml  swe_agent.yaml
bunsen/coding_agent/: __init__.py  agent.py  prompts.py  runner.py
bunsen/issue_agent/: __init__.py  agent.py  core.py  prompts.py
bunsen/issue_chat_agent/: __init__.py  agent.py  core.py  prompts.py
bunsen/shared/: __init__.py  github.py  github_client.py  llms.py  personas.py  settings.py  yaml_utils.py
bunsen/swe_agent/: __init__.py  agent.py  config.py  core.py  prompts.py  runner.py
coverage/: COVERAGE.md
trajectories/runner/swe_agent__openai/o4-mini__t-1.00__p-1.00__c-3.00___thomaseleff__bunsen-i3/thomaseleff__bunsen-i3/: config.yaml  thomaseleff__bunsen-i3.patch  thomaseleff__bunsen-i3.pred  thomaseleff__bunsen-i3.traj
