[metadata]
name = bunsen
description = `bunsen` is an open-source multi-agent duo for streamlined software development.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Eleff
project_urls =
    Issues = https://github.com/thomaseleff/bunsen/issues
    Releases = https://github.com/thomaseleff/bunsen/releases
classifiers =
    Development Status :: 4 - Beta
    Topic :: Database :: Front-Ends
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
python_requires = >=3.11.0
# install_requires =

# [options.entry_points]
# console_scripts =
    # audera = audera.cli.audera:main